--- a/plugin/index.html
+++ b/plugin/index.html
@@ -9,13 +9,12 @@
 	<link rel="stylesheet" href="assets/menu.css">
 </head>
 
-
 <body>
 	
 	<div id="iframeContainer" class="pluginBody">
 				
 		<div id="productionContainer">
-			<h3>NRCS connect plugin</h3>
+			<h3>NewsArts connect plugin</h3>
 			<label for="productionSelector">Production</label>
 			<select name="productionSelector" id="productionSelector">
                 <!-- <option value="" selected="selected">Set production</option> -->
